tests/shouldFail/z00024.c
int main(void){
	int x = 0;
	(int)(&x) & 7;
}

